--- a/src/stylesheets/_settings.scss
+++ b/src/stylesheets/_settings.scss
@@ -118,3 +118,7 @@ $grid-template-columns: 6 !default;
 
 $inactive-b-color: #f2f2f2;
 $active-b-color: #252525;
+
+// Icons
+// - - - - - - - - - - - - - - - - - - - -
+$fa-font-path: "../webfonts";
