--- a/src/stylesheets/_tabs-accordions.scss
+++ b/src/stylesheets/_tabs-accordions.scss
@@ -95,7 +95,7 @@
       background: $light-grey;
       color: $dark-grey;
       font: {
-         family: $font-family-body !important;
+         // family: $font-family-body !important;
          size: em(19.2);
          weight: bold !important;
       }
@@ -112,40 +112,50 @@
       &:focus {
          cursor: pointer;
       }
+      .tab-header {
+         font: {
+            family: $font-family-body !important;
+         }
+         @include margin-left();
+      }
    }
    & > [data-tab="active"] {
-      font: {
-         family: $font-family-body !important;
-      }
+      // font: {
+      //    family: $font-family-body !important;
+      // }
       background: $oil;
       color: $silver;
    }
 
    /* Panels */
    & > [data-panel] {
-      @include padding(0);
+      @include padding-top(0);
+      @include padding-bottom(0);
       max-height: 0;
       visibility: hidden;
-      //      -moz-transition: cubic-bezier(0, 0.48, 0.58, 1) 0.035s max-height;
-      //      -o-transition: cubic-bezier(0, 0.48, 0.58, 1) 0.035s max-height;
-      //      -webkit-transition: cubic-bezier(0, 0.48, 0.58, 1) 0.035s max-height;
-      //      transition: cubic-bezier(0, 0.48, 0.58, 1) 0.035s max-height;
+      left: 0;
+      background: $white;
       & > p {
          @include margin(0);
       }
+      @include transition(
+         $transition-timing-function: cubic-bezier(0.865, 0.14, 0.095, 0.87),
+         $transition-duration: 300ms
+      );
+      @include transition($transition-property: padding);
    }
    & > [data-panel="active"] {
       @include padding();
-      background: white;
       visibility: visible;
       left: 0;
       max-height: 2000px;
-      z-index: 1000;
+      // z-index: 1000;
       width: 100%;
-      -moz-transition: linear 3s max-height;
-      -o-transition: linear 3s max-height;
-      -webkit-transition: linear 3s max-height;
-      transition: linear 3s max-height;
+      @include transition(
+         $transition-timing-function: cubic-bezier(0.865, 0.14, 0.095, 0.87),
+         $transition-duration: 300ms
+      );
+      @include transition($transition-property: padding);
    }
 }
 
